corrected comment in header.liquid for site theme, disable publication_thumbnails, first project example post

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -117,7 +117,7 @@
             </li>
           {% endif %}
 
-          {% COMMENTED OUT THEME TOGGLER 
+          {% comment %}
 
             {% if site.enable_darkmode %}
               <!-- Toogle theme mode -->
@@ -130,7 +130,7 @@
               </li>
             {% endif %}
 
-          %}
+          {% endcomment %}
 
         </ul>
       </div>
